# all-math-GPU-calculator

./: CMakeLists.txt  CMakePresets.json  README.md  config.txt  main.cpp  settings.ixx
cuda_backend/: cuda_evaluator.ixx
cuda_backend/details/: cuda_nvrtc_compiler.ixx
src/: console_print.ixx  main.cpp  settings.ixx
src/cuda_backend/details/: cuda_driver_executor.ixx  cuda_kernel_generator.ixx
src/cuda_backend/host_pipeline/utilities/: error_handler.ixx  lookup_table.ixx  types.ixx
src/host_pipeline/: lexer.ixx  pratt_parser.ixx
src/host_pipeline/ir_core/: ir_generator.ixx  ir_optimizer.ixx
src/host_pipeline/utilities/: error_handler.ixx  types.ixx
src/program_interactive_commands/: help.ixx
tests/: CMakeLists.txt  program_pipeline_test.cpp  test_expressions.ixx
